--- a/pages/Login.html
+++ b/pages/Login.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/loginStyle.css">
+    <link rel="stylesheet" href="../styles/loginStyle.css">
+
+    <script src="../scripts/login.js" defer></script>
 </head>
 
 <body>
@@ -15,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid nav-login">
-                <img class="icon" src="/assets/Logo-Tecsidel.png" alt="icone da empresa tecsidel">
+                <img class="icon" src="../assets/Logo-Tecsidel.png" alt="icone da empresa tecsidel">
                 <div class="navbar-nav">
                     <strong>
                         <p class="txt-cred">Entre com suas credenciais</p>
@@ -30,13 +32,13 @@
             <form class="form-login">
                 <div class="mb-3">
                     <label for="N_matricula" class="form-label">Matrícula</label>
-                    <input type="text" class="form-control input-login" id="N_matricula" aria-describedby="N_matricula">
+                    <input type="text" class="form-control input-login" id="N_matricula" aria-describedby="N_matricula" autocomplete="username">
                     <div id="nr_matricula_help" class="form-text">Caso não tenha acesso por favor contato a gerência.
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control input-login" id="senha">
+                    <input type="password" class="form-control input-login" id="senha" autocomplete="current-password">
                 </div>
                 <button type="submit" class="btn btn-outline-success">Entrar</button>
             </form>
@@ -45,8 +47,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
-    <script src="/scripts/login.js"></script>
 
 </body>
 
