--- a/pages/Login.html
+++ b/pages/Login.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/loginStyle.css">
-
     <script src="../scripts/login.js" defer></script>
 </head>
 
@@ -30,17 +29,16 @@
             <form class="form-login">
                 <div class="mb-3">
                     <label for="N_matricula" class="form-label">Matrícula</label>
-                    <input type="text" class="form-control input-login" id="N_matricula" aria-describedby="N_matricula" autocomplete="username">
+                    <input type="text" class="form-control input-login" id="N_matricula" aria-describedby="N_matricula"
+                        autocomplete="username">
                     <div id="nr_matricula_help" class="form-text">Caso não tenha acesso por favor contato a gerência.
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="senha" class="form-label">Senha</label>
                     <input type="password" class="form-control input-login" id="senha" autocomplete="current-password">
-                
                 </div>
                 <button type="submit" class="btn btn-outline-success">Entrar</button>
-                
             </form>
         </div>
     </div>
