--- a/pages/Login.html
+++ b/pages/Login.html
@@ -38,8 +38,7 @@
                     <label for="senha" class="form-label">Senha</label>
                     <input type="password" class="form-control input-login" id="senha" autocomplete="current-password">
                 </div>
-                <button type="submit" class="btn btn-outline-success">Entrar</button>
-                
+                <a href="Monitoring.html" type="submit" class="btn btn-outline-success">Entrar</a>
             </form>
         </div>
     </div>
