--- a/pages/Home.html
+++ b/pages/Home.html
@@ -28,7 +28,7 @@
               <a class="nav-link" aria-disabled="#footer">Sobre nós</a>
             </li>
           </ul>
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <a class="btn btn-outline-success" type="submit" href="/pages/Login.html">Login</a>
         </div>
       </div>
     </nav>
