--- a/pages/Monitoring.html
+++ b/pages/Monitoring.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg nav-color">
       <div class="container-fluid">
         <img class="icon" src="../assets/Logo-Tecsidel.png" alt="icone da empresa tecsidel">
         <div class="nav-login" id="navbarSupportedContent">
@@ -81,8 +81,6 @@
         </div>
       </div>
     </div>
-  
-  
   </div>
 </body>
 
