querry screen create

--- a/pages/Monitoring.html
+++ b/pages/Monitoring.html
@@ -16,7 +16,7 @@
       <div class="container-fluid">
         <img class="icon" src="../assets/Logo-Tecsidel.png" alt="icone da empresa tecsidel">
         <div class="nav-login" id="navbarSupportedContent">
-          <a class="btn btn-light" type="submit" href="/pages/Home.html">Home</a>
+          <a class="btn btn-light" type="submit" href="../pages/Home.html">Home</a>
         </div>
       </div>
     </nav>
