--- a/pages/Home.html
+++ b/pages/Home.html
@@ -28,7 +28,7 @@
               <a class="nav-link" aria-disabled="#footer">Sobre nós</a>
             </li>
           </ul>
-          <a class="btn btn-outline-success" type="submit" href="/pages/Login.html">Login</a>
+          <a class="btn btn-outline-success" type="submit" href="../pages/Login.html">Login</a>
         </div>
       </div>
     </nav>
@@ -53,7 +53,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4 card-section">
         <div class="col">
           <div class="card">
-            <img src="/assets/cidades-do-futuro-sample.webp" class="card-img-top" alt="...">
+            <img src="../assets/cidades-do-futuro-sample.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tecisdel e a cidade do futuro:</h5>
               <p class="card-text">A Tecisdel está revolucionando as cidades com soluções tecnológicas avançadas,
@@ -64,7 +64,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="/assets/free-flow-sample.webp" class="card-img-top" alt="...">
+            <img src="../assets/free-flow-sample.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tecisdel e o free flow:</h5>
               <p class="card-text">A Tecisdel implementa sistemas de free flow que eliminam a necessidade de paradas em
@@ -75,7 +75,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="/assets/post_thumbnail-0f15ec19bcb70f963e42db85f9421f0c.jpeg" class="card-img-top" alt="...">
+            <img src="../assets/post_thumbnail-0f15ec19bcb70f963e42db85f9421f0c.jpeg  " class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tecisdel e a gestão de dados:</h5>
               <p class="card-text">A Tecisdel oferece soluções robustas para a gestão de dados, proporcionando ferramentas
@@ -86,7 +86,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="/assets/seguranca-de-dados-scaled-1.jpeg" class="card-img-top" alt="...">
+            <img src="../assets/seguranca-de-dados-scaled-1.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tecisdel e a proteção de dados:
               </h5>
