fix: responsive elementes

--- a/pages/Login.html
+++ b/pages/Login.html
@@ -30,13 +30,13 @@
                 <div class="mb-3">
                     <label for="N_matricula" class="form-label">Matrícula</label>
                     <input type="text" class="form-control input-login" id="N_matricula" aria-describedby="N_matricula"
-                        autocomplete="username">
+                        autocomplete="username" required >
                     <div id="nr_matricula_help" class="form-text">Caso não tenha acesso por favor contato a gerência.
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control input-login" id="senha" autocomplete="current-password">
+                    <label for="senha" class="form-label" >Senha</label>
+                    <input type="password" class="form-control input-login" id="senha" autocomplete="current-password" required>
                 </div>
                 <a href="Monitoring.html" type="submit" class="btn btn-outline-success">Entrar</a>
             </form>
