--- a/pages/Home.html
+++ b/pages/Home.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="#cards">Informações</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="#footer">Sobre nós</a>
+              <a class="nav-link" href="#footer">Sobre nós</a>
             </li>
           </ul>
           <a class="btn btn-outline-success" type="submit" href="../pages/Login.html">Login</a>
@@ -99,7 +99,7 @@
     </div>
   </section>
     
-  <footer class="bg-dark text-white mt-5">
+  <footer class="bg-dark text-white mt-5" id="footer">
     <div class="container py-5">
       <div class="row">
         <div class="col-md-4 mb-4">
