feat: add button pages

--- a/pages/Monitoring.html
+++ b/pages/Monitoring.html
@@ -82,6 +82,9 @@
       </div>
     </div>
   </div>
+  <footer>
+    <a class="btn btn-warning" type="submit" href="../pages/QuerryScreen.html">Filtrar dados por data</a>
+  </footer>
 </body>
 
 </html>
