--- a/pages/QuerryScreen.html
+++ b/pages/QuerryScreen.html
@@ -64,6 +64,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <a class="btn btn-warning" type="submit" href="../pages/Monitoring.html">Visão geral</a>
+      </footer>
 </body>
 </html>
 
