--- a/pages/Monitoring.html
+++ b/pages/Monitoring.html
@@ -83,7 +83,7 @@
     </div>
   </div>
   <footer>
-    <a class="btn btn-warning" type="submit" href="../pages/QuerryScreen.html">Filtrar dados por data</a>
+    <a class="btn btn-warning" type="submit" href="../pages/QuerryScreen.html">Filtrar</a>
   </footer>
 </body>
 
